--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@
 html, body, p, h1, h2, h3, h4 {
     font-family: 'helvetica-neue', sans-serif;
     font-size: 16.1px;
+    letter-spacing: 0px;
 }    
 
 
@@ -31,7 +32,7 @@ body {
         
 	  	}
 	h2 {
-		color: #9b59b6;
+		color: #7f5ab4;
 		font-size: 24px;
 	}
 
@@ -157,6 +158,8 @@ body {
 		width: 351px;
 		height:29px;
 		margin-left:.7em;
+		color:#7f5ab4;
+		padding-left:.5em;
 	}
 
 	.email-btn {
