Removed Why section part 2

--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
 
 @font-face {
 	font-family: "helvetica-neue";
-	src: url(HelveticaNeue.ttf);
+	src: url(../fonts/HelveticaNeue.ttf);
 }
 
 html, body, p, h1, h2, h3, h4 {
