--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,7 @@ body {
 	.phone-img {
 		height:520px;
 		width:325px;
-		margin-top: 15vh;
+		margin-top: 14vh;
 	}
 
 	.page-scroll {
@@ -136,7 +136,7 @@ body {
 	}
 
 	.down-arrow {
-		margin-left:48vw;
+		margin-left:49.7vw;
 		margin-top: 3vh;
 	}
 
@@ -271,7 +271,7 @@ body {
 	.mobile-btn {
 		display: block;
 	}
-	
+
 }
 
 /****  Mobile size ****/
@@ -288,8 +288,9 @@ body {
 	}
 
 	.phone-img {
-		width: 100%;
-		height: 100%;
+		margin-left: 0px;
+		width: 50%;
+		height: 50%;
 	}
 	
 	.textbox h1, .textbox h3 {
@@ -307,6 +308,10 @@ body {
 		margin-left: 0;
 		margin-right: 0;
 		text-align: center;
+	}
+
+	.down-arrow {
+		margin-left: 48vw;
 	}
 
 }
