--- a/css/main.css
+++ b/css/main.css
@@ -156,6 +156,16 @@ body {
 		color: #A1A1A1;
 	}
 
+	.front-page-text-1 {
+		font-family: "helvetica-light";
+	}
+
+	.front-page-subtext {
+		font-family: 'helvetica-light';
+		font-size: 12px;
+		color:#aed4af;
+	}
+
 	.call-to-action {
 		font-size:21.44px;
 		color: #fff;
