--- a/css/new-age.css
+++ b/css/new-age.css
@@ -189,7 +189,8 @@ header .device-container .screen img {
 }
 @media (min-width: 768px) {
   header {
-    min-height: 100%;
+    max-height: 100%;
+    height:100vh;
   }
   header .header-content {
     text-align: left;
@@ -217,9 +218,11 @@ header .device-container .screen img {
     font-size: 50px;
   }
 }
+/*
 section {
   padding: 100px 0;
 }
+*/
 section h2 {
   font-size: 50px;
 }
@@ -330,6 +333,7 @@ section.cta .overlay {
 }
 section.contact {
   text-align: center;
+  height: 23vh;
 }
 section.contact h2 {
   margin-top: 0;
@@ -339,17 +343,21 @@ section.contact h2 i {
   color: #dd4b39;
 }
 section.contact ul.list-social {
-  margin-bottom: 0;
+    display: block;
+    margin-top: 8vh;
 }
-section.contact ul.list-social li a {
+
+section.contact ul.list-social li {
+  padding-left:12px;
+  padding-right:12px;
+}
+
+section.contact ul.list-social li img {
   display: block;
-  height: 80px;
-  width: 80px;
-  line-height: 80px;
-  font-size: 40px;
-  border-radius: 100%;
-  color: white;
+  height: 50px;
+  width: 50px;
 }
+/*
 section.contact ul.list-social li.social-twitter a {
   background-color: #1da1f2;
 }
@@ -368,6 +376,7 @@ section.contact ul.list-social li.social-google-plus a {
 section.contact ul.list-social li.social-google-plus a:hover {
   background-color: #d73925;
 }
+*/
 footer {
   background-color: #222222;
   padding: 25px 0;
@@ -496,3 +505,6 @@ body {
     margin-right: auto;
 }
 
+#icons{
+    
+}
