--- a/css/new-age.css
+++ b/css/new-age.css
@@ -18,15 +18,19 @@
   letter-spacing: 2px;
 }
 */
+
+
 html,
 body {
   height: 100%;
   width: 100%;
 }
+
 body {
   font-family: Helvetica, "Helvetica Neue","HelveticaNeue-Light", "Helvetica Neue Light", Helvetica, Arial, "Lucida Grande", sans-serif; 
    font-weight: 300;
 }
+/*
 a {
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
@@ -37,6 +41,8 @@ a:hover,
 a:focus {
   color: #fcbd20;
 }
+*/
+
 hr {
   max-width: 100px;
   margin: 25px auto 0;
@@ -61,103 +67,17 @@ p {
   line-height: 1.5;
   margin-bottom: 20px;
 }
-.navbar-default {
-  background-color: white;
-  border-color: rgba(34, 34, 34, 0.05);
-  -webkit-transition: all 0.35s;
-  -moz-transition: all 0.35s;
-  transition: all 0.35s;
-  font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
-  font-weight: 200;
-  letter-spacing: 1px;
-}
-.navbar-default .navbar-header .navbar-brand {
-  font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
-  font-weight: 200;
-  letter-spacing: 1px;
-  color: #fdcc52;
-}
-.navbar-default .navbar-header .navbar-brand:hover,
-.navbar-default .navbar-header .navbar-brand:focus {
-  color: #fcbd20;
-}
-.navbar-default .navbar-header .navbar-toggle {
-  font-size: 12px;
-  color: #222222;
-  padding: 8px 10px;
-}
-.navbar-default .nav > li > a {
-  font-family: 'Lato', 'Helvetica', 'Arial', 'sans-serif';
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-size: 11px;
-}
-.navbar-default .nav > li > a,
-.navbar-default .nav > li > a:focus {
-  color: #222222;
-}
-.navbar-default .nav > li > a:hover,
-.navbar-default .nav > li > a:focus:hover {
-  color: #fdcc52;
-}
-.navbar-default .nav > li.active > a,
-.navbar-default .nav > li.active > a:focus {
-  color: #fdcc52 !important;
-  background-color: transparent;
-}
-.navbar-default .nav > li.active > a:hover,
-.navbar-default .nav > li.active > a:focus:hover {
-  background-color: transparent;
-}
-@media (min-width: 768px) {
-  .navbar-default {
-    background-color: transparent;
-    border-color: transparent;
-  }
-  .navbar-default .navbar-header .navbar-brand {
-    color: rgba(255, 255, 255, 0.7);
-  }
-  .navbar-default .navbar-header .navbar-brand:hover,
-  .navbar-default .navbar-header .navbar-brand:focus {
-    color: white;
-  }
-  .navbar-default .nav > li > a,
-  .navbar-default .nav > li > a:focus {
-    color: rgba(255, 255, 255, 0.7);
-  }
-  .navbar-default .nav > li > a:hover,
-  .navbar-default .nav > li > a:focus:hover {
-    color: white;
-  }
-  .navbar-default.affix {
-    background-color: white;
-    border-color: rgba(34, 34, 34, 0.1);
-  }
-  .navbar-default.affix .navbar-header .navbar-brand {
-    color: #222222;
-  }
-  .navbar-default.affix .navbar-header .navbar-brand:hover,
-  .navbar-default.affix .navbar-header .navbar-brand:focus {
-    color: #fdcc52;
-  }
-  .navbar-default.affix .nav > li > a,
-  .navbar-default.affix .nav > li > a:focus {
-    color: #222222;
-  }
-  .navbar-default.affix .nav > li > a:hover,
-  .navbar-default.affix .nav > li > a:focus:hover {
-    color: #fdcc52;
-  }
-}
+
+/*Head Page Template CSS*/
 header {
   position: relative;
   width: 100%;
   min-height: auto;
   overflow-y: hidden;
-
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+   W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ 
   color: black;
 }
+
 header .header-content {
   text-align: center;
   padding: 150px 0 50px;
@@ -184,9 +104,11 @@ header .device-container {
   max-width: 300px;
   margin: 0 auto 100px;
 }
+
 header .device-container .screen img {
   border-radius: 3px;
 }
+
 @media (min-width: 768px) {
   header {
     max-height: 100%;
@@ -210,7 +132,7 @@ header .device-container .screen img {
   header .device-container {
     max-width: none;
     max-height: calc(0vh);
-    margin: 100px auto 0;
+    margin: 80px auto 0;
   }
 }
 @media (min-width: 992px) {
@@ -218,122 +140,109 @@ header .device-container .screen img {
     font-size: 50px;
   }
 }
+
+/*Content I added*/
 /*
-section {
-  padding: 100px 0;
+#arrow {
+  width: 100%;
+  text-align: center;
+    margin-top: -220px;
+  
 }
 */
+
+#logo img{
+    display: block;
+    margin-left:auto;
+    margin-right: auto;
+    margin-top: 130px;
+    width: 100px;
+}
+
+#iphone {
+    margin-top: -20px;
+}
+
+#explore h3{
+    color:#683FAB;
+    font-weight: 400;   
+}
+
+#explore{
+    margin-top:40px;
+    text-align: center;
+}
+
+#description {
+    margin-top:30px;
+    text-align: center;
+}
+
+#description p {
+    color:#D4D4D4;
+    font-weight: 200;   
+}
+
+#apple_img{
+    margin-top: 30px;
+    width: 200px;
+    display:block;
+    margin-left:auto;
+    margin-right: auto;
+}
+
+/*arrow*/
+@bg: #2d2d37; // Dark blue
+@primary: #fd6b21; // Orange
+
+body { background: black;}
+
+a { color:#683FAB; text-decoration: none; }
+a:hover{
+    color:none;
+}
+
+.arrow img{
+    padding-left:5vw;
+}
+
+.arrow {
+  text-align: left;
+  margin: 8% 0;
+  margin-top:-30vh;
+}
+
+.bounce {
+  -moz-animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+
+
+/*Contact Section*/
+
 section h2 {
   font-size: 50px;
 }
-section.download {
-  padding: 150px 0;
-  position: relative;
-}
-section.download h2 {
-  margin-top: 0;
-  font-size: 50px;
-}
-section.download .badges .badge-link {
-  display: block;
-  margin-bottom: 25px;
-}
-section.download .badges .badge-link:last-child {
-  margin-bottom: 0;
-}
-section.download .badges .badge-link img {
-  height: 60px;
-}
-@media (min-width: 768px) {
-  section.download .badges .badge-link {
-    display: inline-block;
-    margin-bottom: 0;
-  }
-}
-@media (min-width: 768px) {
-  section.download h2 {
-    font-size: 70px;
-  }
-}
-section.features .section-heading {
-  margin-bottom: 100px;
-}
-section.features .section-heading h2 {
-  margin-top: 0;
-}
-section.features .section-heading p {
-  margin-bottom: 0;
-}
-section.features .device-container,
-section.features .feature-item {
-  max-width: 300px;
-  margin: 0 auto;
-}
-section.features .device-container {
-  margin-bottom: 100px;
-}
-@media (min-width: 992px) {
-  section.features .device-container {
-    margin-bottom: 0;
-  }
-}
-section.features .feature-item {
-  text-align: center;
-  margin-bottom: 100px;
-}
-section.features .feature-item h3 {
-  font-size: 30px;
-}
-section.features .feature-item i {
-  font-size: 80px;
-  background: -webkit-linear-gradient(to left, #7b4397, #dc2430);
-  background: linear-gradient(to left, #7b4397, #dc2430);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-@media (min-width: 992px) {
-  section.features .device-container,
-  section.features .feature-item {
-    max-width: none;
-  }
-}
-section.cta {
-  position: relative;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
-  background-position: center;
-  background-image: url('../img/bg-cta.jpg');
-  padding: 250px 0;
-}
-section.cta .cta-content {
-  position: relative;
-  z-index: 1;
-}
-section.cta .cta-content h2 {
-  margin-top: 0;
-  margin-bottom: 25px;
-  color: white;
-  max-width: 450px;
-  font-size: 50px;
-}
-@media (min-width: 768px) {
-  section.cta .cta-content h2 {
-    font-size: 80px;
-  }
-}
-section.cta .overlay {
-  height: 100%;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  position: absolute;
-  top: 0;
-  left: 0;
-}
+
+
 section.contact {
   text-align: center;
-  height: 23vh;
+  height: 28vh;
+position: relative;
+    
 }
 section.contact h2 {
   margin-top: 0;
@@ -344,7 +253,7 @@ section.contact h2 i {
 }
 section.contact ul.list-social {
     display: block;
-    margin-top: 8vh;
+    margin-top: 10vh;
 }
 
 section.contact ul.list-social li {
@@ -357,26 +266,8 @@ section.contact ul.list-social li img {
   height: 50px;
   width: 50px;
 }
-/*
-section.contact ul.list-social li.social-twitter a {
-  background-color: #1da1f2;
-}
-section.contact ul.list-social li.social-twitter a:hover {
-  background-color: #0d95e8;
-}
-section.contact ul.list-social li.social-facebook a {
-  background-color: #3b5998;
-}
-section.contact ul.list-social li.social-facebook a:hover {
-  background-color: #344e86;
-}
-section.contact ul.list-social li.social-google-plus a {
-  background-color: #dd4b39;
-}
-section.contact ul.list-social li.social-google-plus a:hover {
-  background-color: #d73925;
-}
-*/
+
+
 footer {
   background-color: #222222;
   padding: 25px 0;
@@ -400,6 +291,7 @@ footer ul li a:active,
 footer ul li a.active {
   text-decoration: none;
 }
+
 
 .bg-primary {
   background: #683FAB;
@@ -459,52 +351,77 @@ body {
   webkit-tap-highlight-color: #222222;
 }
 
-#arrow {
-  width: 100%;
-  text-align: center;
-  margin-top: -220px;
+header {
+ 
 }
 
-#logo img{
-    display: block;
-    margin-left:auto;
-    margin-right: auto;
-    margin-top: 180px;
-    width: 100px;
-}
 
-#iphone {
-    margin-top: -20px;
-}
 
-#explore h3{
-    color:#683FAB;
-    font-weight: 400;   
-}
 
-#explore{
-    margin-top:30px;
-    text-align: center;
-}
-
-#description {
-    margin-top:20px;
-    text-align: center;
-}
-
-#description p {
-    color:#D4D4D4;
-    font-weight: 200;   
-}
-
-#apple_img{
-    margin-top: 20px;
-    width: 200px;
-    display:block;
-    margin-left:auto;
-    margin-right: auto;
-}
-
-#icons{
+/*Responsive View*/
+@media screen and (max-width:450px){
     
+    
+    html, body {
+        height: 100%;
+    }
+    
+    #iphone_img {
+        position: fixed;
+        visibility: hidden;
+    }
+    
+    
+    header {
+        background-image: url(../img/Phone_View.png);
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: center;
+        min-height: 100%;
+        height: auto !important;
+
+    }
+    
+    #logo img{
+        margin-top: -17vh;
+        width: 100px;
+        margin-bottom: 7vh;
+    }
+    
+    #description {
+    margin-top: 3vh;
+    text-align: center;
+    }
+    
+    #apple_img {
+    margin-top: 50px;
+    width: 200px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    }
+    
+/*
+    #arrow {
+      width: 100%;
+      text-align: center;
+        position: absolute;
+        bottom: 20px;
+    
+    }
+*/
+    
+    .arrow {
+      text-align: center;
+      margin: 8% 0;
+      margin-top:10vh;
+    }
+    
+    .arrow img{
+        margin-right:2vh;
+    }
+
+ 
 }
+
+
