--- a/lib/device-mockups/device-mockups.css
+++ b/lib/device-mockups/device-mockups.css
@@ -42,7 +42,7 @@
 	.device-mockup > .device {
 		position: absolute;
 		top: 0; bottom: 0; left: 0; right: 0;
-		width: 100%; height: 100%;
+		width: 262.5px; height: 529.61px;
 		background-size: 100% 100%;
 		background-repeat: no-repeat;
 		background-image: url("macbook/macbook.png");
